Revision history for DBIx-Class-InflateColumn-Boolean
0.003000  2016-02-02
	* Switch to ExtUtils::MakeMaker.
	* Replace Contextual::Return with a light-weight
	  DBIx::Class::InflateColumn::Boolean::Value object
	  (RT#100827, haarg, abraxxa)

0.002001  2015-09-03
	* Whitespace fixes.

0.002000  2012-10-11
	* Fix issues with Contextual::Return >= 0.004004 (dconway)
	* require Contextual::Return >= 0.004007

0.001001  2008-10-22
	* require DBIx::Class 0.08
	* POD fixes

0.001000  2008-08-26
	  First version, released on an unsuspecting world.
