@@ -1,0 +1,12 @@
+language: perl
+perl:
+    - "5.22"
+    - "5.20"
+    - "5.18"
+    - "5.16"
+    - "5.14"
+    - "5.12"
+    - "5.10"
+    - "5.8"
+install:
+    - "cpanm --notest --installdeps ."
